Bug 239537 - kspreadsheet:open office: Embedded text file document is not displayed
Summary: kspreadsheet:open office: Embedded text file document is not displayed
Status: VERIFIED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: opendocument (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-27 05:43 UTC by Lassi Nieminen
Modified: 2011-02-25 13:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test data created in open excel format (14.21 KB, application/x-zip-compressed)
2009-10-27 05:43 UTC, Lassi Nieminen
Details
Screen shot when viewed in Kspread (184.94 KB, image/pjpeg)
2009-10-27 05:45 UTC, Lassi Nieminen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-05-28 03:23:02 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2009-10-27 06:43:28 +0200 ----

Created an attachment
Test data created in open excel format

SOFTWARE VERSION:
  Kubuntu 9.04
  Koffice (svn version 1037805)
  Test document (open spread): oos_embedded_text_file.ods

STEPS LEADING TO PROBLEM: 
  1. Open the attached document in open spread.
  2. Open the same document in KSpread.
  3. Observe that embedded text doc is not displayed.

EXPECTED OUTCOME:
Embedded text document should be displayed
ACTUAL OUTCOME:
Embedded document is not displayed
FREQUENCY OF OCCURRENCE: 
always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-10-27 06:45:15 +0200 ----

Created an attachment
Screen shot when viewed in Kspread



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-12 17:00:29 +0200 ----

Reassign to Mek



--- Bug imported by faure@kde.org 2010-05-28 03:23  ---

This bug was previously known as _bug_ 144292.

Imported an attachment (id=46158)
Imported an attachment (id=46159)

Unknown bug field "example" encountered while moving bug
   <example>2010-03-12 17:00:29</example>

Comment 1 Halla Rempt 2010-12-04 15:17:29 UTC
SVN commit 1203553 by rempt:

Only load images

Other mimetypes cannot be handled by the pictureshape. This means
that the unavail shape is used to handle the content.

BUG:239537
BUG:239794
BUG:239324
BUG:231676
BUG:244371
BUG:231662

 M  +15 -3     PictureShapeFactory.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1203553
Comment 2 swathi 2011-02-25 13:20:51 UTC
Verified in git commit 103bb9f0aafefae2747153478b08931001b4ba4c.