Only load images

Other mimetypes cannot be handled by the pictureshape. This means
that the unavail shape is used to handle the content.

BUG:239537
BUG:239794
BUG:239324
BUG:231676
BUG:244371
BUG:231662

svn path=/branches/work/koffice-essen/; revision=1203553